--- a/links_tables/session2.html
+++ b/links_tables/session2.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>inici</h1>
-
-    <a href="./session2.html">pa la session2 tete</a>
+    <h1>estas en la session2 tete</h1>
 </body>
 </html>
