--- a/links_tables/session2.html
+++ b/links_tables/session2.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>estas en la session2 tete</h1>
+    <a href="./index.html">pal inicio</a>
+    <p></p>
+    <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1598845986i/55176693.jpg" alt="nel bro esta rota" width="200px">
 </body>
 </html>
