--- a/links_tables/session2.html
+++ b/links_tables/session2.html
@@ -7,8 +7,18 @@
 </head>
 <body>
     <h1>estas en la session2 tete</h1>
-    <a href="./index.html">pal inicio</a>
+    <a href="./index.html" >pal inicio</a>
     <p></p>
-    <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1598845986i/55176693.jpg" alt="nel bro esta rota" width="200px">
+    <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1598845986i/55176693.jpg" alt="nel bro esta rota" width="200px" download target="_blank">
+
+    <table border="1">
+        <caption>
+          Tabla con caption
+        </caption>
+        <tr>
+          <td>tabla de una celda.</td>
+        </tr>
+    </table>
+      
 </body>
 </html>
