--- a/links_tables/session2.html
+++ b/links_tables/session2.html
@@ -20,5 +20,70 @@
         </tr>
     </table>
       
+    <p>&lt;video&gt;</p>
+    <video autoplay muted loop width="200px">
+        <source src="" type="video/"/>
+    </video>
+
+    <b>&lt; lists &gt;</b>
+    <!-- ul -> unordered list -->
+    <ul> 
+        haha unordered list
+        <li>haha this is an  element</li>
+        <li>yes</li>
+        <li>yes</li>
+        <li>yes</li>
+        <li>yes</li>
+        <ul> 
+            haha unordered list
+            <li>haha this is an  element</li>
+            <li>yes</li>
+            <li>yes</li>
+            <li>yes</li>
+            <li>yes</li>
+            <ul> 
+                haha unordered list
+                <li>haha this is an  element</li>
+                <li>yes</li>
+                <li>yes</li>
+                <li>yes</li>
+                <li>yes</li>
+                <ul> 
+                    haha unordered list
+                    <li>haha this is an  element</li>
+                    <li>yes</li>
+                    <li>yes</li>
+                    <p>dfghjk</p>
+                    <li>yes</li>
+                    <li>yes</li>
+                </ul>
+            </ul>
+        </ul>
+    </ul>
+    <!-- ol -> ordered list -->
+    <ol>
+        <li>haha this is also an element</li>
+        <li>yes</li>
+        <li>yes</li>
+        <li>yes</li>
+        <li>yes</li>
+        <ol>
+            <li>haha this is also an element</li>
+            <li>yes</li>
+            <li>yes</li>
+            <li>yes</li>
+            <li>yes</li>
+            <ol type="i" start="10" >
+                <li>haha this is also an element</li>
+                <li>yes</li>
+                <li>yes</li>
+                <ul>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur enim quos similique perferendis eos sunt suscipit molestias nisi cumque deleniti non dicta, velit labore possimus. Unde aperiam sequi dolores delectus tenetur quisquam recusandae hic soluta eos sunt asperiores suscipit ex atque, a natus esse, sit porro earum quo. Sint, unde.</ul>
+                
+                <li>yes</li>
+                <li>yes</li>
+            </ol> 
+        </ol>
+    </ol>
+
 </body>
 </html>
