--- a/links_tables/index.html
+++ b/links_tables/index.html
@@ -10,6 +10,6 @@
     <h1>inici</h1>
     <a href="./session2.html">pa la session 2 tete</a>
     <p>si</p>
-    <a href="http://google.com">pa google</a>
+    <a href="./tables.html">pa las tablas</a>
 </body>
 </html>
