--- a/links_tables/tables.html
+++ b/links_tables/tables.html
@@ -6,6 +6,8 @@
     <title>tables</title>
 </head>
 <body>
+    <a href="./index.html">para el inicio</a>
+    <p></p>
     <!-- tr -> table row -->
      <!-- td -> table data -->
     <table border="1">
