--- a/links_tables/index.html
+++ b/links_tables/index.html
@@ -11,5 +11,14 @@
     <a href="./session2.html">pa la session 2 tete</a>
     <p>si</p>
     <a href="./tables.html">pa las tablas</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>Ejercicio</h2>
+    <a href="./ejercicio/index.html">ejercicio</a>
+
+
 </body>
 </html>
