--- a/links_tables/ejercicio/index.html
+++ b/links_tables/ejercicio/index.html
@@ -12,5 +12,7 @@
         </li>
         <li><a href="./paginas/CFGS.html">Curso</a></li>
     </ol>
+
+    <a href="../index.html">salir del ejercicio</a>
 </body>
 </html>
