--- a/s02/index.html
+++ b/s02/index.html
@@ -23,6 +23,17 @@
                 yes
             </div>
         </article>
+
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+        
     </div>
 </body>
 </html>
